--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "x-front-bar",
   "version": "1.0",
+  "homepage_url": "https://github.com/mpizza/x-front-bar",
   "description": "Adds fashion bar in top of webpage, let your experience consist of lPhoneX",
   "icons": {
     "48": "icons/icon-48.png"
